fix: capslock and shift behavior synced with local storage logic

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,8 +19,6 @@ body {
 }
 
 #input-field {
-    position: relative;
-    top: 0;
     resize: both; 
     overflow: auto;
 
@@ -45,6 +43,8 @@ body {
     padding: 1rem;
     background: rgba(149, 162, 226, 0.797);
     border-radius: 0.6rem;
+    border: 2px solid rgb(13, 56, 248);
+    box-shadow: 3px 2px 10px rgba(20, 49, 215, 0.533);
 
     & div:nth-child(14) {
         background-color: black;
@@ -79,7 +79,7 @@ body {
     }
     & div:nth-child(42) {
         background-color: black;
-        width: 3rem;
+        width: 2.6rem;
         &:hover {
             cursor: pointer;
             background-color: rgb(118, 249, 67);
@@ -97,7 +97,7 @@ body {
         width: 1rem;
     }
     & div:nth-child(57) {
-        width: 1.2rem;
+        width: 1rem;
     }
     & div:nth-child(60) {
         width: 17.5rem;
@@ -116,7 +116,7 @@ body {
     }
 }
 
-#key-btn, #key-btn-ru {
+#key-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,11 +125,11 @@ body {
     max-width: 100%;
     margin: 5px;
     
-    background-color: rgb(83, 83, 83);
+    background-color: rgba(72, 105, 106, 0.344);
     color: white;
     border-radius: 0.3em;
     border: 1px solid rgba(255, 0, 0, 0.425);
-    box-shadow: 11px rgba(0, 0, 0, 0.625);
+    box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.625);
     padding: 1rem;
 
     &:hover {
@@ -146,7 +146,10 @@ body {
 
     width: 850px;
     margin-top: 2rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    color: white;
+    padding: 1rem;
+    line-height: 2.5rem;
 }
 
 // animation
@@ -167,25 +170,24 @@ body {
 }
 
 .rgb {
-    border: 2px solid;
     animation: strobe 0.5s infinite;
 }
 
 @keyframes strobe {
     0% {
-      border-color: rgba(255, 0, 0, 0.517);
+      box-shadow: 3px 2px rgba(255, 0, 0, 0.517);
     }
     25% {
-      border-color: rgba(0, 128, 0, 0.597);
+      box-shadow: 3px 2px rgba(0, 128, 0, 0.597);
     }
     50% {
-      border-color: rgba(0, 0, 255, 0.548);
+      box-shadow: 3px 2px rgba(0, 0, 255, 0.548);
     }
     75% {
-      border-color: rgba(255, 0, 0, 0.869);
+      box-shadow: 3px 2px rgba(255, 0, 0, 0.869);
     }
     100% {
-      border-color: rgba(66, 128, 0, 0.455);
+      box-shadow: 3px 2px rgba(66, 128, 0, 0.455);
     }
   }
 
